--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -1,22 +1,42 @@
-.navbar {
-    top: 40px;
-    height: 94px;
+.navBar {
+	top: 40px;
+	background-color: rgba(255, 127, 80, 0.192);
+}
 
-    nav {
-        flex: 2;
-    }
+.navBar--container {
+	text-transform: uppercase;
+	
+	h1 {
+		font-size: 3rem;
+		color: #fff;
+	}
 
-    ul {
-        list-style-type: none;
-    }
+	nav {
+		flex: 2;
+		justify-content: center;
+		align-items: center;
+	}
 
-    li {
-        display: block;
-        width: 100px;
-    }
+	ul {
+		list-style-type: none;
+	}
 
-    a {
-        color: black;
-        text-decoration: none;
-    }
+	li {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 150px;
+		height: 100%;
+	}
+
+	a {
+		color: #fff;
+		text-decoration: none;
+	}
+
+	.btn {
+		width: 100px;
+	}
+
+
 }
