finalizado todo HTML e CSS

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,14 @@
 .container {
     padding: 0;
 }
+
+.microfone {
+    width: 130px;
+    height: 70px;
+}
+
+.title {
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
