--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -1,16 +1,11 @@
 .hero {
-    background: url('../assets/hero.jpg')no-repeat bottom center scroll;
+    background: url('../assets/hero.jpg')no-repeat bottom center;
     height: 100vh;
-    background-position: 30% 45%;
     background-color: black;
     background-size: cover;
     position: relative;
 
     h1 {
-        position: absolute;
-        top: 70%;
-        right: 39%;
-
         font-size: 5rem;
         text-transform: uppercase;
 
