--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -1,9 +1,5 @@
-.navBar {
-	top: 40px;
+nav {
 	background-color: rgba(255, 127, 80, 0.192);
-}
-
-.navBar--container {
 	text-transform: uppercase;
 	
 	h1 {
@@ -11,37 +7,50 @@
 		color: #fff;
 	}
 
-	nav {
-		flex: 2;
-		justify-content: center;
-		align-items: center;
-	}
-
-	ul {
-		list-style-type: none;
-		margin-right: 100px;
-	}
-
+	@media screen and (max-width: 560px) {
+		h1 {
+			font-size: 2rem;
+			padding-left: 10px;
+		}
+    }
+	
 	li {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 150px;
-		height: 100%;
+		list-style-type: none;
+		width: 9vw;
 	}
-
+	
 	a {
 		color: #fff;
 		text-decoration: none;
+		text-justify: center;
 	}
-
+	
 	a:hover{
 		color: #ddd;
 	}
-
+	
+	a:active {
+		color: #124F7B;
+	}
+	
 	.btn {
 		width: 100px;
+		height: 35px;
+		background-color: rgba(255,255,255,.3);
+		border-color: transparent;
 	}
-
-
+	
+	.btn:hover {
+		color: #FFF;
+		background-color: #124F7B;
+	}
 }
+
+
+
+
+	
+	
+
+
+
