--- a/src/components/Welcome.scss
+++ b/src/components/Welcome.scss
@@ -3,8 +3,15 @@
 	flex-direction: column;
 	align-items: center;
 
+	.video {
+		max-width: 900px;
+	}
+
 	.btn:hover {
 		background-color: rgba(63, 123, 252, 0.932);
 		border-color:rgba(63, 123, 252, 0.932);
 	}
 }
+
+
+
