--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,6 +1,10 @@
-header{
+.header-start {
     background-color: rgba(31, 32, 33, 0.3);
     transition: .3s ease-in-out;
+}
+
+.header-final {
+    background-color: rgba(31, 32, 33, 0.8);
 }
 
 .header--section {
@@ -10,6 +14,14 @@ header{
         font-size: 1rem;
         color: #fff;
         margin: 0;
+    }
+
+    a{
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #ddd !important;
     }
 
     li {
@@ -62,9 +74,11 @@ header{
 }
 
 @media screen and (max-width: 576px) {
+
     .header--section {
         padding: 0 10px;
     }
 }
+
 
 /* Animação */
